--- a/app/design/frontend/pc/default/layout/catalog.xml
+++ b/app/design/frontend/pc/default/layout/catalog.xml
@@ -155,6 +155,7 @@ Product view
                 <block type="catalog/product_view" name="product.info.options.wrapper" as="product_options_wrapper" template="catalog/product/view/options/wrapper.phtml" translate="label">
                     <label>Info Column Options Wrapper</label>
                     <block type="core/template" name="options_js" template="catalog/product/view/options/js.phtml"/>
+                    <block type="core/template" name="options_sizechart" template="catalog/product/view/options/options_sizechart.phtml"/>
                     <block type="catalog/product_view_options" name="product.info.options" as="product_options" template="catalog/product/view/options.phtml">
                         <action method="addOptionRenderer"><type>text</type><block>catalog/product_view_options_type_text</block><template>catalog/product/view/options/type/text.phtml</template></action>
                         <action method="addOptionRenderer"><type>file</type><block>catalog/product_view_options_type_file</block><template>catalog/product/view/options/type/file.phtml</template></action>
