--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -175,8 +175,8 @@
     </div>
 
 
-<!--no-display-->
-    <div class="<?php if($this->htmlEscape($_option->getTitle()) == 'Enter Color Code') echo 'Color'; else echo 'Size';?>  measurements"
+
+    <div class="<?php if($this->htmlEscape($_option->getTitle()) == 'Enter Color Code') echo 'Color'; else echo 'Size';?>  measurements no-display"
          style="position: absolute;left: 240px;top:185px;bottom: 20px;">
         <div class="cusbox customHide" id="oc_content" style="display: block;">
             <dl class="ocdl br5p">
@@ -186,16 +186,12 @@
                 </div>
                 </dt>
                 <dd class="co_main co_wedding">
-                    <img src="<?php echo $this->getUrl();?>/skin/frontend/pc/default/images/commont/measurements.png" width="400" height="400">
+                    <img src="<?php echo $this->getUrl();?>/skin/frontend/pc/default/images/commont/measurements.png" >
 
-                    <div class="F39 BB">To fit heels,we'll add extra 8-13cm onto floor-length dresses.</div>
+                    <div class="F39">To fit heels,we'll add extra 8-13cm onto floor-length dresses.</div>
 
                 </dd>
-                <dd class="oc_foot revcon">
-                    <div class="coadd">
-                        Total: <span class="erveynum">Item Price <span class="fuhao">USD $</span><span class="huobi" data-price="226.79" id="oc_customprice">226.79</span> + Custom fees <span class="fuhao">USD $</span><span id="custom_Cprice" class="huobi" data-price="19.99">19.99</span> =</span><span class="fuhao">USD $</span><span class="huobi" data-price="246.78" id="mytotalprice">246.78</span>
-                    </div>
-                </dd>
+
             </dl>
         </div>
     </div>
