--- a/app/design/frontend/pc/default/template/checkout/cart.phtml
+++ b/app/design/frontend/pc/default/template/checkout/cart.phtml
@@ -91,12 +91,18 @@
         </div>
 
         <div class="shopping_bag_pay">
-            <a href="javascript:history.go(-1);">&laquo;&nbsp;Continue shopping</a>
-            <input type="button" class="paypal_topay"  onclick="window.location.href='<?php echo $this->getUrl('checkout/onepage')?>'" />
-            <span class="cor">-OR-</span>
-            <input type="button" class="btn_ptp" value="Proceed to Pay" onclick="window.location.href='<?php echo $this->getUrl('checkout/onepage')?>'" />
+            <?php if(!$this->hasError()): ?>
+                <ul class="checkout-types">
+                    <li>
+                        <a class="continue_shopping" href="<?php echo $this->getUrl();?>">&laquo;&nbsp;Continue shopping</a>
+                    </li>
+                    <?php foreach ($this->getMethods('methods') as $method): ?>
+                        <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
+                            <li><?php echo $methodHtml; ?></li>
+                        <?php endif; ?>
+                    <?php endforeach; ?>
+                </ul>
+            <?php endif; ?>
         </div>
-
     </div>
-
 </div>
