--- a/app/design/frontend/pc/default/template/checkout/multishipping/item/default.phtml
+++ b/app/design/frontend/pc/default/template/checkout/multishipping/item/default.phtml
@@ -24,13 +24,22 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php if ($this->isPossibleOnepageCheckout()):?>
-    <button
-        type="button"
-        title="<?php echo Mage::helper('core')->quoteEscape($this->__('Proceed to Checkout')) ?>"
-        class="<?php if ($this->isDisabled()):?> no-checkout<?php endif; ?> btn_ptp"
-        <?php if ($this->isDisabled()):?> disabled="disabled"<?php endif; ?>
-        onclick="window.location='<?php echo $this->getCheckoutUrl() ?>';">
-        Proceed to Pay
-    </button>
-<?php endif?>
+<h3 class="product-name"><a href="<?php echo $this->getProductUrl() ?>"><?php echo $this->escapeHtml($this->getProductName()) ?></a></h3>
+<?php if ($_options = $this->getOptionList()):?>
+<dl class="item-options">
+    <?php foreach ($_options as $_option) : ?>
+    <?php $_formatedOptionValue = $this->getFormatedOptionValue($_option) ?>
+    <dt><?php echo $this->escapeHtml($_option['label']) ?></dt>
+    <dd<?php if (isset($_formatedOptionValue['full_view'])): ?> class="truncated"<?php endif; ?>><?php echo $_formatedOptionValue['value'] ?>
+        <?php if (isset($_formatedOptionValue['full_view'])): ?>
+        <div class="truncated_full_value">
+            <dl class="item-options">
+                <dt><?php echo $this->escapeHtml($_option['label']) ?></dt>
+                <dd><?php echo $_formatedOptionValue['full_view'] ?></dd>
+            </dl>
+        </div>
+        <?php endif; ?>
+    </dd>
+    <?php endforeach; ?>
+</dl>
+<?php endif; ?>
