--- a/app/design/frontend/pc/default/template/checkout/multishipping/state.phtml
+++ b/app/design/frontend/pc/default/template/checkout/multishipping/state.phtml
@@ -24,13 +24,16 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php if ($this->isPossibleOnepageCheckout()):?>
-    <button
-        type="button"
-        title="<?php echo Mage::helper('core')->quoteEscape($this->__('Proceed to Checkout')) ?>"
-        class="<?php if ($this->isDisabled()):?> no-checkout<?php endif; ?> btn_ptp"
-        <?php if ($this->isDisabled()):?> disabled="disabled"<?php endif; ?>
-        onclick="window.location='<?php echo $this->getCheckoutUrl() ?>';">
-        Proceed to Pay
-    </button>
-<?php endif?>
+<?php 
+/**
+ * Mustishipping state
+ * 
+ * @see Mage_Checkout_Block_Multishipping_State
+ */
+?>
+<ul class="checkout-progress" id="checkout-progress-state">
+<?php foreach ($this->getSteps() as $_step): ?>
+    <li title="<?php echo $_step->getLabel() ?>"<?php if($_step->getIsActive()): ?> class="active"<?php endif; ?>><span><?php echo $_step->getLabel() ?></span></li>
+<?php endforeach; ?>
+</ul>
+<script type="text/javascript">decorateGeneric($$('#checkout-progress-state li'), ['first','last']);</script>
