--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2574,7 +2574,7 @@ tr.summary-details-excluded { font-style: italic; }
 
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span { background: #f39; }
 
-.home_banners_1 { background: #eeeeff; height: 488px; width: 100%; overflow: hidden; }
+.home_banners_1 { background: #eeeeff; height: 488px; width: 100%; display: block; overflow: hidden; }
 .home_banners_1 .owl-controls { position: absolute; left: 0; right: 0; bottom: 0; margin: 0; }
 .home_banners_1 .owl-controls img { width: 100%; height: 100%; }
 
@@ -2916,10 +2916,13 @@ tr.summary-details-excluded { font-style: italic; }
 .shopping_bag .shopping_bag_totals #shopping-cart-totals-table tfoot tr { font-size: 18px; }
 .shopping_bag .shopping_bag_totals #shopping-cart-totals-table tfoot tr td:first-child { font-weight: bolder; color: #000; }
 .shopping_bag .shopping_bag_pay { float: right; clear: both; margin: 45px 0px 20px 0; }
-.shopping_bag .shopping_bag_pay a { text-decoration: underline; margin-right: 15px; }
-.shopping_bag .shopping_bag_pay .paypal_topay { cursor: pointer; background: url(../images/commont/paypaltopay.jpg) no-repeat 0 0; width: 170px; height: 32px; border: medium none; outline: none; }
-.shopping_bag .shopping_bag_pay .cor { padding: 0 15px; }
-.shopping_bag .shopping_bag_pay .btn_ptp { outline: none; background: url(../images/commont/jxs.png) no-repeat 15px 6px #f39; padding: 0 25px 0 40px; text-align: center; font-size: 15px; color: #fff; height: 30px; line-height: 30px; border: none; cursor: pointer; border-radius: 5px; }
+.shopping_bag .shopping_bag_pay .checkout-types { *zoom: 1; }
+.shopping_bag .shopping_bag_pay .checkout-types:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
+.shopping_bag .shopping_bag_pay .checkout-types li { float: left; margin: 0 8px; line-height: 32px; }
+.shopping_bag .shopping_bag_pay .checkout-types li a { text-decoration: underline; }
+.shopping_bag .shopping_bag_pay .checkout-types li .continue_shopping { display: block; height: 32px; line-height: 46px; }
+.shopping_bag .shopping_bag_pay .checkout-types li p { margin: 0; }
+.shopping_bag .shopping_bag_pay .checkout-types li .btn_ptp { outline: none; background: url(../images/commont/jxs.png) no-repeat 15px 6px #f39; padding: 0 25px 0 40px; text-align: center; font-size: 15px; color: #fff; height: 30px; line-height: 30px; border: none; cursor: pointer; border-radius: 5px; }
 .shopping_bag .empty_cart_div { width: 100%; text-align: center; vertical-align: middle; margin: 50px auto; }
 .shopping_bag .empty_cart_div .bt-1-new { background: #f39; padding: 2px 10px; display: inline-block; color: #fff; border-radius: 5px; }
 .shopping_bag .empty_cart_div .empty_cart_msg { height: 100px; text-align: left; display: inline-block; color: #4c5253; }
