--- a/skin/frontend/pc/default/scss/styles.scss
+++ b/skin/frontend/pc/default/scss/styles.scss
@@ -20,11 +20,11 @@
     max-width: $style_width; 
     min-width:900px;
     margin: 0 auto;
-    box-shadow: 0px 0px 10px #eeeeee;
+    //box-shadow: 0px 0px 10px #eeeeee;
 }
 @media only screen and (max-width: $style_width){
   .page{
-        padding:0 10px;
+        padding:0 60px;
     }
 }
 
