--- a/app/design/frontend/pc/default/template/page/home/banners.phtml
+++ b/app/design/frontend/pc/default/template/page/home/banners.phtml
@@ -50,6 +50,7 @@
             margin:10,
             nav:false,
             dots: false,
+            items: 5,
             autoWidth:true,
             autoplay:false
         });
