--- a/skin/frontend/pc/default/scss/_cms.scss
+++ b/skin/frontend/pc/default/scss/_cms.scss
@@ -64,8 +64,7 @@
 }
 .grid-container{
   float:left;
-  width:978px;
-  margin-left:10px;
+  width:100%;
   position:relative;
 }
 
@@ -95,7 +94,7 @@
 }
 
 .nation-container ul{
-  width:1000px;
+  width:100%;
 }
 
 .grid-head h2{
