--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -3286,7 +3286,7 @@ input.checkbox { margin: -3px 3px 0 0 !important; }
 
 .grid-1 { display: inline; float: left; margin-bottom: 8px; margin-left: 8px; position: ralative; }
 
-.grid-container { float: left; width: 978px; margin-left: 10px; position: relative; }
+.grid-container { float: left; width: 100%; position: relative; }
 
 .nation-container li { font-family: Arial, Helvetica, sans-serif; font-size: 12px; }
 
@@ -3294,7 +3294,7 @@ input.checkbox { margin: -3px 3px 0 0 !important; }
 
 .nation-container li em { background: url(/skin/frontend/pc/default/images/commont/flags_adjusted.jpg) no-repeat 0 0; display: block; position: relative; width: 28px; height: 18px; float: left; clear: left; margin-right: 10px; border: 1px solid #ededed; }
 
-.nation-container ul { width: 1000px; }
+.nation-container ul { width: 100%; }
 
 .grid-head h2 { width: 100%; height: 45px; font-family: Georgia; font-size: 16px; text-transform: uppercase; color: #1985a9; background: url(/skin/frontend/pc/default/images/commont/line.gif) no-repeat center 28px; text-align: center; font-weight: normal; margin: 20px 0; letter-spacing: 1px; }
 
