--- a/app/design/frontend/pc/default/template/review/list.phtml
+++ b/app/design/frontend/pc/default/template/review/list.phtml
@@ -1,8 +1,8 @@
-<!-- <style>-->
-<!--    .std{-->
-<!--        display: none;-->
-<!--    }-->
-<!--</style>-->
+ <style>
+    .std{
+        display: none;
+    }
+</style>
 <?php $_items = $this->getReviewsCollection()->getItems();?>
 
 <div class="VIEW_GALLERY">
