--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -3266,9 +3266,6 @@ input.checkbox { margin: -3px 3px 0 0 !important; }
 
 #inner_loader_coupon { top: 45% !important; left: 48% !important; z-index: 5000; position: fixed !important; }
 
-.std { *zoom: 1; }
-.std:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
-
 .help_left { float: left; width: 30%; }
 .help_left dl { color: #666; }
 .help_left dl dt { font-size: 15px; line-height: 30px; }
@@ -3276,6 +3273,7 @@ input.checkbox { margin: -3px 3px 0 0 !important; }
 .help_left dl dd a:hover { color: #f39; }
 
 .help_left + .std { float: right; width: 69%; }
+.help_left + .std img { max-width: 100%; }
 
 .twbox-help-shadow-s { float: left; position: relative; z-index: 0; margin: 0 0 16px 0; padding-bottom: 12px; width: 100%; border: 1px solid #e4e4e4; color: #555; min-height: 100px; }
 
