--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -3272,8 +3272,8 @@ input.checkbox { margin: -3px 3px 0 0 !important; }
 .help_left dl dd { font-size: 12px; line-height: 20px; }
 .help_left dl dd a:hover { color: #f39; }
 
-.help_left + .std { float: right; width: 75%; }
-.help_left + .std img { max-width: 100%; }
+.help_left + .std, .help_left + .help_right { float: right; width: 75%; }
+.help_left + .std img, .help_left + .help_right img { max-width: 100%; }
 
 .twbox-help-shadow-s { float: left; position: relative; z-index: 0; margin: 0 0 16px 0; padding-bottom: 12px; width: 100%; border: 1px solid #e4e4e4; color: #555; min-height: 100px; }
 
