--- a/app/design/frontend/pc/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list.phtml
@@ -110,7 +110,18 @@
                         <a href="<?php echo $_product->getProductUrl() ?>"
                            title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>"
                            class="product-image"
-                           style="background-image:url(<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(333,444); ?>);"></a>
+                           style="background-image:url(<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(333,444); ?>);"
+                           data-small_image="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(333,444); ?>"
+                           data-getmediagalleryimages="<?php
+                           foreach($_product->getMediaGalleryImages() as $GMI){
+                               if( $_product->getSmallImage() != $GMI->getFile() ){
+                                   echo $this->helper('catalog/image')->init($_product, 'image',$GMI->getFile())->resize(333,444);
+                                   break;
+                               }
+                           }
+                           ?>"
+                            >
+                        </a>
 
 
                         <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h2>
@@ -147,7 +158,16 @@
 
 <?php endif; ?>
 
+<script>
+    jQuery(document).ready(function($){
 
+        $("a[data-getmediagalleryimages]").mouseover(function(){
+            $(this).css("background-image","url("+ $(this).data('getmediagalleryimages')+")");
+        });
 
+        $("a[data-getmediagalleryimages]").mouseout(function(){
+            $(this).css("background-image","url("+ $(this).data('small_image')+")");
+        });
 
-
+    });
+</script>
