--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -258,6 +258,9 @@
                     background-position:center center;
                     background-size: 100%;
                     border-radius: 3px;
+                    img{
+                        display:none;
+                    }
                 }
 
                 .product-name{
