--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2696,6 +2696,7 @@ tr.summary-details-excluded { font-style: italic; }
 .page .dress_list .products-grid li.item .item_deatil { margin: 3px; border: 2px solid #e9e9e9; border-radius: 3px; }
 .page .dress_list .products-grid li.item .item_deatil:hover { border: 2px solid #f39; }
 .page .dress_list .products-grid li.item .product-image { width: 100%; padding-bottom: 133.333%; background-repeat: no-repeat; background-position: center center; background-size: 100%; border-radius: 3px; }
+.page .dress_list .products-grid li.item .product-image img { display: none; }
 .page .dress_list .products-grid li.item .product-name { padding: 0 10px !important; line-height: 13px !important; height: 26px; overflow: hidden; font-size: 11px !important; word-wrap: break-word; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
 .page .dress_list .products-grid li.item .product-name a { color: #666; font-weight: normal; }
 .page .dress_list .products-grid li.item .product-name a:hover { color: #f39; }
